--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-        <main class="container">
+        <main class="container-fluid" ng-app="CommentApp" ng-controller="CommentController">
             <section>
                 <img src="img/super-bass-o-matic-76.jpg" alt="product picture" class="product-picture">
                 <h1>The Super Bass-o-Matic '76</h1>
@@ -18,25 +18,64 @@
 
             <section>
                 <h2>Add a Comment</h2>
-                <!--  
-                put a form here for entering a new comment
-                the user must select a rating, and enter a name, title, and comment body
-                before the comment can be saved to the server
-                for the rating selection, use the Angular Bootstrap Rating directive 
-                http://angular-ui.github.io/bootstrap/#/rating
-                their script file is included below
-                -->
+                    <form ng-submit="addComment()">
+                        <div class="form-group">
+                            <label for="comment-rating">Rating</label>
+                            <rating max="5" id="clickable" ng-model="newComment.rating"></rating>
+                        </div>
+                        <div class="form-group">
+                            <label for="comment-title">Title</label>
+                            <input type="text" id="comment-title" class="form-control" placeholder="Title of Comment" ng-model="newComment.title"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="comment-body">Comment</label>
+                            <input type="text" id="comment-body" class="form-control" placeholder="Your Comment Here" ng-model="newComment.body"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="comment-name">Commenter</label>
+                            <input type="text" id="comment-name" class="form-control" placeholder="Who is Commenting?" ng-model="newComment.name"/>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary" ng-disabled="inserting">Add Comment</button>
+                        </div>
+                    </form>
             </section>
 
             <section>
                 <h2>Comments</h2>
-                <!-- 
-                display existing comments here
-                each comment should also have UI allowing the user to vote up/down the comment
-                as well as delete it
-                 -->
+                <img ng-if="loading" src="img/ajax-spinner-sm.gif" alt="spinner"/>
+                <table ng-if="comments.length" class="table">
+                    <thead>
+                        <tr>
+                            <th>Votes:</th>
+                            <th>Rating:</th>
+                            <th>Title:</th>
+                            <th>Comment:</th>
+                            <th>Review By:</th>
+                            <th>Delete Comment</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="comment in comments">
+                            <td>
+                                {{comment.votes || 0}}
+                                <span class="glyphicon glyphicon-arrow-up" id="clickable" ng-click="incrementVotes(comment, 1)"></span>
+                                <span class="glyphicon glyphicon-arrow-down" id="clickable" ng-click="incrementVotes(comment, -1)"></span>
+                            </td>
+                            <td>
+                                <rating max="5" ng-model="comment.rating" readonly="true"></rating>
+                            </td>
+                            <td>{{comment.title}}</td>
+                            <td>{{comment.body}}</td>
+                            <td>{{comment.name}}</td>
+                            <td>
+                                <span class="glyphicon glyphicon-remove" id="clickable" ng-click="removeComment(comment)"></span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h2 ng-if="!comments.length">No one has reviewed this product yet...Be the first to review it!</h2>
             </section>
-
         </main>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
