--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <td>{{comment.body}}</td>
                             <td>{{comment.name}}</td>
                             <td>
-                                <span class="glyphicon glyphicon-remove" id="clickable" ng-click="removeComment(comment)"></span>
+                                <span class="glyphicon glyphicon-remove" id="clickable" ng-click="deleteComment(comment)"></span>
                             </td>
                         </tr>
                     </tbody>
